cap nhat code