@@ -72,53 +72,24 @@ public class GioHangController {
         Map<String, Object> response = new HashMap<>();
         KhuyenMai khuyenMai = khuyenMaiService.findByMaKhuyenMai(maKhuyenMai);
         if (khuyenMai != null) {
-            response.put("khuyenMai", khuyenMai);
-            return ResponseEntity.ok(response);
+            if (khuyenMai.getNgayKetThuc().before(new Date())) {
+                khuyenMai.setTrangThai(false);
+                khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+                response.put("message", "Mã khuyến mãi không còn hoạt động");
+                return ResponseEntity.badRequest().body(response);
+            }
+            if (khuyenMai.getTrangThai() || khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() > 0) {
+                response.put("khuyenMai", khuyenMai);
+                return ResponseEntity.ok(response);
+            }
+            response.put("message", "Mã giảm giá không còn hoạt động");
+            return ResponseEntity.badRequest().body(response);
         }
         response.put("message", "Mã giảm giá không tồn tại");
         return ResponseEntity.badRequest().body(response);
     }
 
-    @PostMapping("/ma-giam-gia")
-    @ResponseBody
-    public ResponseEntity<Map<String, Object>> layMaGiamGia(@RequestBody Map<String, String> request) {
-        Map<String, Object> response = new HashMap<>();
-        String maKm = request.get("maKhuyenMai");
-        if (maKm == null || maKm.isEmpty()) {
-            response.put("message", "Mã khuyến mãi không hợp lệ");
-            return ResponseEntity.badRequest().body(response);
-        }
-        double tongTien;
-        try {
-            tongTien = Double.parseDouble(request.get("totalPrice"));
-        } catch (NumberFormatException | NullPointerException e) {
-            response.put("message", "Tổng tiền không hợp lệ");
-            return ResponseEntity.badRequest().body(response);
-        }
-
-        KhuyenMai khuyenMai = khuyenMaiService.findByMaKm(maKm);
-        if (khuyenMai != null) {
-            if (khuyenMai.getDieuKienApDung() > tongTien) {
-                response.put("message", "Đơn hàng chưa đủ điều kiện dùng mã giảm giá");
-                return ResponseEntity.badRequest().body(response);
-            }
-            double giaGiam;
-            if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
-                giaGiam = khuyenMai.getGiaTriGiam();
-            } else { // Giảm giá theo %
-                double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
-                giaGiam = Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
-            }
-
-            response.put("message", "Thêm mã khuyến mãi thành công");
-            response.put("giaGiam", giaGiam);
-            return ResponseEntity.ok(response);
-        }
-
-        response.put("message", "Mã khuyến mãi không tồn tại");
-        return ResponseEntity.badRequest().body(response);
-    }
-
+    //Thanh toán khi nhận hàng
     @PostMapping("/thanh-toan")
     @ResponseBody
     public ResponseEntity<?> thanhToanOnline(@RequestBody Map<String, Object> sanPhamThanhToan) {
@@ -152,15 +123,16 @@ public class GioHangController {
                 lstGioHangChiTiet.add(gioHangChiTietService.findById(id));
             }
             if (lstGioHangChiTiet.size() == 0) {
-                return ResponseEntity.badRequest().body(Map.of("message", "Chưa chọn sản phẩm"));
+                return ResponseEntity.badRequest().body(Map.of("message", "Chưa chọn sản phẩm","size",lstGioHangChiTiet.size()));
             }
+            //Kiểm tra giá của sản phẩm có thay đổi không
             boolean isChaged = false;
             StringBuilder thayDoi = new StringBuilder();
             for (GioHangChiTiet gh : lstGioHangChiTiet) {
                 if (Math.abs(gh.getIdChiTietSanPham().getGiaBan() - gh.getDonGia()) > 0.001f) {
                     thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
                     isChaged = true;
-                }else if(gh.getSoLuong()>gh.getIdChiTietSanPham().getSoLuong()){
+                } else if (gh.getSoLuong() > gh.getIdChiTietSanPham().getSoLuong()) {
                     thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
                     isChaged = true;
                 }
@@ -171,8 +143,7 @@ public class GioHangController {
             if (!thayDoi.toString().isBlank()) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm " + thayDoi.toString() + "có thay đổi thay đổi", "load", true));
             }
-
-            float tongTien = (float) lstGioHangChiTiet.stream().filter(item->item.getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
+            float tongTien = (float) lstGioHangChiTiet.stream().filter(item -> item.getTrangThai() && item.getIdChiTietSanPham().getTrangThai() && item.getIdChiTietSanPham().getIdSanPham().getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
             if (tongTien > 20000000) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng vượt quá 20 triệu"));
             }
@@ -184,13 +155,18 @@ public class GioHangController {
             if (gioHang.getIdKhuyenMai() != null) {
                 khuyenMai = khuyenMaiService.findById(gioHang.getIdKhuyenMai().getId());
                 if (khuyenMai != null) {
+                    int checkKM = checkKhuyenMai(khuyenMai);
+                    if (checkKM == 1 || checkKM == 4) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi không còn hoạt động"));
+                    } else if (checkKM == 2) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi đã được sử dụng hết"));
+                    }
                     if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
                         tongTienGiam = khuyenMai.getGiaTriGiam();
                     } else { // Giảm giá theo %
                         double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
                         tongTienGiam = (float) Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
                     }
-
                     hoaDon.setIdKhuyenMai(khuyenMai);
                 }
             }
@@ -221,13 +197,13 @@ public class GioHangController {
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(true);
             hoaDon.setTrangThai(2);
+            hoaDon.setGhiChu("Mua hàng ngày " + new Date() + " thanh toán khi nhận hàng");
             // Lưu hóa đơn vào database
             hoaDonService.save(hoaDon);
-            if (khuyenMai != null) {
-                khuyenMai.setDaSuDung(khuyenMai.getDaSuDung() + 1);
-                khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
-            }
             //Cập nhật số lượng khuyến mại sau khi khách hàng thanh toán
+            khuyenMai.setDaSuDung(khuyenMai.getDaSuDung() + 1);
+            khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+            //Cập nhật thông tin vao lich su don hang
             TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
             trangThaiDonHang.setTrangThai(hoaDon.getTrangThai());
             trangThaiDonHang.setGhiChu("Thanh toán khi nhận hàng - Chờ xác nhận");
@@ -235,8 +211,6 @@ public class GioHangController {
             trangThaiDonHang.setNgayCapNhat(new Date());
             lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
             // Lấy danh sách sản phẩm trong giỏ hàng
-
-
             for (GioHangChiTiet ghct : lstGioHangChiTiet) {
                 HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
                 hoaDonChiTiet.setIdHoaDon(hoaDonService.findById(hoaDon.getId()));
@@ -260,19 +234,24 @@ public class GioHangController {
 
 
     @GetMapping("/vnpay-return")
-    public RedirectView vnpayReturn(HttpServletRequest request) {
+    public ResponseEntity<?> vnpayReturn(HttpServletRequest request) {
         // Kiểm tra tính hợp lệ của giao dịch
         // Lấy thông tin khách hàng
         KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
         GioHang gioHang = gioHangService.findGioHangByIDKH(khachHang.getId());
         Map<String, Object> giaoDich = (Map<String, Object>) httpSession.getAttribute("giaoDichTam");
         if (giaoDich == null) {
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            // Xóa session sau khi giao dịch hoàn tất
+            httpSession.removeAttribute("giaoDichTam");
+            httpSession.removeAttribute("khachHangSession");
+            return ResponseEntity.badRequest().body(Map.of("message","Thanh toán không thành công"));
         }
+        //Toan bo gio hang chi tiet
         List<GioHangChiTiet> lstGioHangThucTe = gioHangChiTietService.findByIdGioHang(gioHang.getId());
+        //Gio hang chi tiet duoc lay de thanh toan
         List<GioHangChiTiet> lstGioHangChiTiet = (List<GioHangChiTiet>) giaoDich.get("lstGioHangChiTiet");
         if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()) {
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            return ResponseEntity.badRequest().body(Map.of("message","Không tồn tại sản phẩm trong giỏ hàng"));
         }
         boolean isChaged = false;
         StringBuilder thayDoi = new StringBuilder();
@@ -281,6 +260,9 @@ public class GioHangController {
                 if (ghtt.getId() == gh.getId()) {
                     if (Math.abs(ghtt.getIdChiTietSanPham().getGiaBan() - ghtt.getDonGia()) > 0.001f) {
                         thayDoi.append("").append(ghtt.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                        isChaged = true;
+                    } else if (ghtt.getSoLuong()>ghtt.getIdChiTietSanPham().getSoLuong()) {
+                        thayDoi.append(" ").append(ghtt.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
                         isChaged = true;
                     }
                 }
@@ -293,7 +275,7 @@ public class GioHangController {
             httpSession.removeAttribute("giaoDichTam");
             httpSession.removeAttribute("khachHangSession");
             // Có thể thêm flash attribute hoặc query param để thông báo lý do
-            return new RedirectView("/gio-hang/thanh-toan?error=price-changed");
+            return ResponseEntity.badRequest().body(Map.of("message","Sản phẩm "+thayDoi+"thay đổi giá hoặc không còn hoạt động"));
         }
 
         int paymentStatus = vnPay.orderReturn(request);
@@ -301,6 +283,14 @@ public class GioHangController {
             // Lấy danh sách sản phẩm
             Integer idKhuyenMai = (gioHang.getIdKhuyenMai() != null) ? gioHang.getIdKhuyenMai().getId() : null;
             KhuyenMai khuyenMai = (idKhuyenMai != null) ? khuyenMaiService.findById(idKhuyenMai) : null;
+            int checkKM =checkKhuyenMai(khuyenMai);
+            if(checkKM == 1||checkKM == 4){
+                //khuyen mai khong con hoat dong
+                return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi không còn hoạt động"));
+            }else if(checkKM==2){
+                //khuyen mai da duoc su dung het
+                return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi đã được sử dụng hết"));
+            }
             // Tạo hóa đơn mới
             HoaDon hoaDon = new HoaDon();
             hoaDon.setMaHoaDon((String) giaoDich.get("maHoaDon"));
@@ -321,15 +311,16 @@ public class GioHangController {
                 hoaDon.setTongTienGiam(Float.parseFloat(giaoDich.get("tongTienGiam").toString()));
                 hoaDon.setThanhTien(Float.parseFloat(giaoDich.get("thanhTien").toString()));
             } catch (NumberFormatException e) {
-                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                return ResponseEntity.badRequest().body(Map.of("message","Thanh toán thất bại, thông tin không hợp lệ"));
             }
-
             hoaDon.setNgayTao(new Date());
             hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(false);
             hoaDon.setTrangThai(2);
+            hoaDon.setGhiChu("Đơn hàng ngày "+new Date()+"đã thanh toán vnpay");
             hoaDonService.save(hoaDon);
+            //cap nhat so luong khuyen mai da su dung sau khi lưu hóa đơn thành công
             khuyenMai.setDaSuDung(khuyenMai.getDaSuDung() + 1);
             khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
             // Lưu lịch sử trạng thái đơn hàng
@@ -343,10 +334,10 @@ public class GioHangController {
                 // Kiểm tra số lượng sản phẩm trong kho
                 ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(idGioHangChiTiet.getIdChiTietSanPham().getId());
                 if (chiTietSanPham == null) {
-                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                    return ResponseEntity.badRequest().body(Map.of("message","Chi tiết sản phẩm trong giỏ hàng không tồn tại"));
                 }
                 if (chiTietSanPham.getSoLuong() < idGioHangChiTiet.getSoLuong()) {
-                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                    return ResponseEntity.badRequest().body(Map.of("message","Số lượng sản phẩm trong kho không đủ"));
                 }
 
                 // Tạo hóa đơn chi tiết
@@ -367,13 +358,13 @@ public class GioHangController {
             httpSession.removeAttribute("giaoDichTam");
             httpSession.removeAttribute("khachHangSession");
 
-            return new RedirectView("/gio-hang/checkout-success"); // Chuyển hướng trực tiếp
+            return ResponseEntity.ok().body(Map.of("message","Thanh toán thành công"));
         } else if (paymentStatus == 0) {
             //giao dich that bai
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            return ResponseEntity.badRequest().body(Map.of("message","Giao dịch thất bại"));
         } else {
             //Giao dich khong hop le
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            return ResponseEntity.badRequest().body(Map.of("message","Giao dịch không hợp lệ"));
         }
     }
 
@@ -441,7 +432,7 @@ public class GioHangController {
                 return ResponseEntity.badRequest().body(Map.of("message", "Giá của " + thayDoi.toString() + " thay đổi", "load", true));
             }
             String maHoaDon = hoaDonService.taoMaHoaDon();
-            float tongTien = (float) lstGioHangChiTiet.stream().filter(item->item.getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
+            float tongTien = (float) lstGioHangChiTiet.stream().filter(item -> item.getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
             if (tongTien > 20000000) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng vượt quá 20 triệu"));
             }
@@ -499,14 +490,13 @@ public class GioHangController {
         }
         tinhLaiGiaTien(gioHang);
         ArrayList<GioHangChiTiet> lstGioHangChiTiet = new ArrayList<>();
-        ArrayList<GioHangChiTiet> lstGHCTALL =gioHangChiTietService.findByIdGioHang(gioHang.getId());
-        for(GioHangChiTiet gh: lstGHCTALL){
-            if(gh.getTrangThai()){
+        ArrayList<GioHangChiTiet> lstGHCTALL = gioHangChiTietService.findByIdGioHang(gioHang.getId());
+        for (GioHangChiTiet gh : lstGHCTALL) {
+            if (gh.getTrangThai()) {
                 lstGioHangChiTiet.add(gh);
             }
         }
-        if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()) {
-            model.addAttribute("message", "Giỏ hàng của bạn đang trống!");
+        if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()||lstGioHangChiTiet.size()==0) {
             return "redirect:/Sneakers_Nice/hienthi";
         }
         double tien = 0;
@@ -608,6 +598,12 @@ public class GioHangController {
         KhuyenMai khuyenMai = khuyenMaiService.findById(Integer.parseInt(String.valueOf(Object.get("idKhuyenMai"))));
         if (khuyenMai == null) {
             return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi đã hết"));
+        } else if (khuyenMai.getNgayKetThuc().before(new Date())) {
+            khuyenMai.setTrangThai(false);
+            khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+            return ResponseEntity.ok(Map.of("message", "Khuyến mãi không còn hoạt động"));
+        } else if (!khuyenMai.getTrangThai() || khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() <= 0) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Khuyến mãi không còn hoạt động"));
         }
         GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangService.findByEmail(getCurrentUserEmail()).getId());
         // Lấy danh sách sản phẩm
@@ -618,23 +614,21 @@ public class GioHangController {
             if (Math.abs(gh.getIdChiTietSanPham().getGiaBan() - gh.getDonGia()) > 0.001f) {
                 thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
                 isChaged = true;
+            } else if (!gh.getTrangThai() || !gh.getIdChiTietSanPham().getTrangThai() || !gh.getIdChiTietSanPham().getIdSanPham().getTrangThai()) {
+                thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham());
             }
         }
         if (isChaged) {
             tinhLaiGiaTien(gioHang);
         }
         if (!thayDoi.toString().isBlank()) {
-            return ResponseEntity.badRequest().body(Map.of("message", "Giá của " + thayDoi.toString() + " thay đổi", "load", true));
+            return ResponseEntity.badRequest().body(Map.of("message", "Giá" + thayDoi.toString() + " thay đổi hoặc sản phẩm ngừng bán", "load", true));
         }
         try {
-            float tongTien = Float.parseFloat(Object.get("tongTien").toString());
-            if (tongTien < khuyenMai.getDieuKienApDung()) {
-                return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng của bạn không đủ điều kiện"));
-            }
-            if (gioHang.getIdKhuyenMai().getId() == khuyenMai.getId()) {
-                return ResponseEntity.badRequest().body(Map.of("message", "Đã áp dụng mã khuyến mãi"));
-            }
-            List<Integer> lstIdProductsChoice = (List<Integer>) Object.get("selectedIds");
+            List<?> rawList = (List<?>) Object.get("selectedIds");
+            List<Integer> lstIdProductsChoice = rawList.stream()
+                    .map(id -> Integer.parseInt(String.valueOf(id)))
+                    .collect(Collectors.toList());
             float tongTienSanPhamDaChon = 0;
             for (Integer id : lstIdProductsChoice) {
                 GioHangChiTiet gioHangChiTiet = gioHangChiTietService.findById(id);
@@ -643,18 +637,21 @@ public class GioHangController {
             if (tongTienSanPhamDaChon < khuyenMai.getDieuKienApDung()) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng của bạn không đủ điểu kiện"));
             }
+            if (gioHang.getIdKhuyenMai().getId() == khuyenMai.getId()) {
+                return ResponseEntity.ok().body(Map.of("message", "Đã áp dụng mã khuyến mãi"));
+            }
             float tongTienGiam;
             if (khuyenMai.getLoaiKhuyenMai()) {
                 tongTienGiam = khuyenMai.getGiaTriGiam();
             } else {
                 double t1 = khuyenMai.getMucGiamGiaToiDa();
-                double t2 = tongTien * khuyenMai.getGiaTriGiam() / 100;
+                //bổ sung thêm phí ship
+                double t2 = (tongTienSanPhamDaChon) * khuyenMai.getGiaTriGiam() / 100;
                 tongTienGiam = (float) Math.min(t1, t2);
             }
             gioHang.setIdKhuyenMai(khuyenMai);
             gioHangService.save(gioHang);
             return ResponseEntity.ok(Map.of("tongTienGiam", tongTienGiam));
-
         } catch (Exception e) {
             e.printStackTrace();
         }
@@ -698,6 +695,7 @@ public class GioHangController {
                     map.put("hinhAnh", Optional.ofNullable(ghct.getIdChiTietSanPham().getHinhAnh())
                             .orElse("Không có ảnh"));
                     map.put("isOutOfStock", hetHang); // Cờ báo hết hàng
+                    map.put("checkSP", !chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai());
                     return map;
                 })
                 .collect(Collectors.toList());
@@ -751,14 +749,27 @@ public class GioHangController {
                     return ResponseEntity.badRequest()
                             .body(Collections.singletonMap("message", "Sản phẩm đã hết hàng"));
                 } else if (chiTietSanPham.getSoLuong() < soLuong) {
-                    return ResponseEntity.badRequest()
-                            .body(Collections.singletonMap("message", "Sản phẩm trong kho không đủ"));
+                    return ResponseEntity.badRequest().body(
+                            Map.of("message", "Sản phẩm trong kho không đủ")
+                    );
+                } else if (!chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai()) {
+                    return ResponseEntity.badRequest().body(
+                            Map.of("message", "Sản phẩm đã ngừng bán")
+                    );
                 }
                 GioHangChiTiet ghct = gioHangChiTietService.findByIdGioHangAndIDCTSP(
                         gioHangService.findGioHangByIDKH(khachHang.getId()).getId(), chiTietSanPham.getId());
                 if (ghct != null) {
                     int tongSoLuongSanPhamTrongGioHang = ghct.getSoLuong() + soLuong;
                     if (tongSoLuongSanPhamTrongGioHang > chiTietSanPham.getSoLuong()) {
+                        boolean sameProduct = chiTietSanPham.getId() == ghct.getIdChiTietSanPham().getId();
+                        boolean isAvailable = chiTietSanPham.getTrangThai() && ghct.getTrangThai();
+                        boolean quantityMatch = ghct.getSoLuong() == chiTietSanPham.getSoLuong() && ghct.getSoLuong() > 0;
+                        if (sameProduct && isAvailable && quantityMatch) {
+                            return ResponseEntity.ok().body(
+                                    Map.of("message", "Đã toàn bộ sản phẩm trong giỏ hàng", "check", true)
+                            );
+                        }
                         return ResponseEntity.badRequest()
                                 .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
                     }
@@ -766,11 +777,10 @@ public class GioHangController {
                     ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(ghct.getIdGioHang().getId());
                     for (GioHangChiTiet gh : lstGHCT
                     ) {
-                        if(gh.getTrangThai()){
+                        if (gh.getTrangThai()) {
                             tongTien += gh.getTongTien();
                         }
                     }
-
                     if (tongTien + chiTietSanPham.getGiaBan() * soLuong > 20000000) {
                         return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
                     }
@@ -786,7 +796,7 @@ public class GioHangController {
                 if (lstGHCT != null) {
                     for (GioHangChiTiet gh : lstGHCT
                     ) {
-                        if(gh.getTrangThai()){
+                        if (gh.getTrangThai()) {
                             tongTien += gh.getTongTien();
                         }
                     }
@@ -819,7 +829,6 @@ public class GioHangController {
 
     @DeleteMapping("/remove/{id}")
     public ResponseEntity<?> removeSanPham(@PathVariable int id) {
-
         gioHangChiTietService.deleteGioHangChitiet(id);
         return ResponseEntity.ok(Collections.singletonMap("message", "Xóa sản phẩm thành công"));
     }
@@ -830,8 +839,8 @@ public class GioHangController {
         if (gioHangChiTiet != null) {
             ArrayList<GioHangChiTiet> lstGHCT = new ArrayList<>();
             ArrayList<GioHangChiTiet> lstGHALL = gioHangChiTietService.findByIdGioHang(gioHangChiTiet.getIdGioHang().getId());
-            for(GioHangChiTiet gh : lstGHALL) {
-                if(gh.getTrangThai()){
+            for (GioHangChiTiet gh : lstGHALL) {
+                if (gh.getTrangThai()) {
                     lstGHCT.add(gh);
                 }
             }
@@ -841,7 +850,9 @@ public class GioHangController {
             }
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService
                     .findById(gioHangChiTiet.getIdChiTietSanPham().getId());
-            if (chiTietSanPham.getSoLuong() < soLuong) {
+            if (!chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai()) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm không còn hoạt động"));
+            } else if (chiTietSanPham.getSoLuong() < soLuong) {
                 return ResponseEntity.badRequest()
                         .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
             } else if (gioHangChiTiet.getDonGia() * soLuong > 20000000) {
@@ -855,10 +866,10 @@ public class GioHangController {
                         gioHangChiTietService.saveGioHangChitiet(gh);
                         return ResponseEntity.badRequest().body(Map.of("message", sanPhamThayDoiGia));
                     }
-                    if (gh.getId() == idGHCT&&gh.getTrangThai()) {
+                    if (gh.getId() == idGHCT && gh.getTrangThai()) {
                         tongTienGioHang += gh.getDonGia() * soLuong;
                     } else {
-                        if(gh.getTrangThai()){
+                        if (gh.getTrangThai()) {
                             tongTienGioHang += gh.getTongTien();
                         }
                     }
@@ -890,13 +901,16 @@ public class GioHangController {
                 if (gioHangChiTiet.getSoLuong() <= 0) {
                     gioHangChiTietService.deleteGioHangChitiet(gioHangChiTiet.getId());
                     continue;
-                }else if(gioHangChiTiet.getSoLuong()>gioHangChiTiet.getIdChiTietSanPham().getSoLuong()){
-                    if(gioHangChiTiet.getIdChiTietSanPham().getSoLuong()>0){
+                } else if (gioHangChiTiet.getSoLuong() >= gioHangChiTiet.getIdChiTietSanPham().getSoLuong()) {
+                    if (gioHangChiTiet.getIdChiTietSanPham().getSoLuong() > 0 && gioHangChiTiet.getIdChiTietSanPham().getTrangThai() && gioHangChiTiet.getIdChiTietSanPham().getIdSanPham().getTrangThai()) {
+                        gioHangChiTiet.setTrangThai(true);
+                        gioHang.setNgaySua(new Date());
                         gioHangChiTiet.setSoLuong(Math.min(gioHangChiTiet.getSoLuong(), gioHangChiTiet.getIdChiTietSanPham().getSoLuong()));
-                        gioHangChiTiet.setTongTien(gioHangChiTiet.getIdChiTietSanPham().getGiaBan()*gioHangChiTiet.getSoLuong());
-                    } else{
+                    } else {
                         gioHangChiTiet.setTrangThai(false);
                     }
+                } else if (gioHangChiTiet.getTongTrongLuong()!=gioHangChiTiet.getIdChiTietSanPham().getTrongLuong()*gioHangChiTiet.getSoLuong()) {
+                    gioHangChiTiet.setTongTrongLuong((int)gioHangChiTiet.getIdChiTietSanPham().getTrongLuong()*gioHangChiTiet.getSoLuong());
                 }
                 gioHangChiTiet.setDonGia(gioHangChiTiet.getIdChiTietSanPham().getGiaBan());
                 gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * gioHangChiTiet.getSoLuong());
@@ -904,5 +918,24 @@ public class GioHangController {
             }
         }
 
+    }
+
+    //kiểm tra xem khuyến mãi còn hoạt động không
+    private int checkKhuyenMai(KhuyenMai khuyenMai) {
+        if (khuyenMai != null) {
+            if (!khuyenMai.getTrangThai() || khuyenMai.getNgayKetThuc().before(new Date())) {
+                if (khuyenMai.getNgayKetThuc().before(new Date())) {
+                    //nếu khuyến mãi đã hết hạn sử dụng sẽ chuyeern trạng thái
+                    khuyenMai.setTrangThai(false);
+                    khuyenMai.setNgaySua(new Date());
+                    khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+                }
+                return 1;
+            } else if (khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() <= 0) {
+                return 2;
+            }
+            return 3;
+        }
+        return 4;
     }
 }
